[package]
name = "nosracid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
chrono = { version = "0.4.19", features = ["serde"]}
uuid = { version = "0.8", features = ["v4", "serde"] }
